--- a/style.css
+++ b/style.css
@@ -99,11 +99,11 @@ h3{
     font-size: 17px;
     font-weight: 400;
     opacity: 0.9;
-
 }
 
 
-@media (max-width: 575.98px) {
+
+@media (max-width: 768px) {
     .hero{
         padding: 0;
     }
@@ -114,6 +114,9 @@ h3{
     }
     .introduce{
         font-size: 20px;
+    }
+    .my-story{
+        margin: 20px 50px;
     }
 
 }
