--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h5{
         padding: 0;
     }
     h1{
-        font-size: 48px;
+        font-size: 36px;
         line-height: normal;
         padding: 10px;
     }
@@ -154,6 +154,9 @@ h5{
     }
     .card{
         margin:var(--margin-auto);   
-    width: 15em;
- }
+        width: 15em;
+    }
+    .card-img-top{
+        display: none;
+    }
 }
