--- a/style.css
+++ b/style.css
@@ -174,11 +174,13 @@ h5{
     .card{
         margin:var(--margin-auto);   
         width: 15em;
+        margin-top: 10px;
     }
-   
-}
-@media (max-width: 992px){
     .card-img-top{
         display: none;
     }
+    .bild-with{
+        display: none;
+    }
+   
 }
