--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ h5{
     .card{
         margin:var(--margin-auto);   
         width: 15em;
-        margin-top: 10px;
+        margin: 10px 0 auto;
     }
     .card-img-top{
         display: none;
